--- a/playbooks/roles/gluster-server/tasks/main.yml
+++ b/playbooks/roles/gluster-server/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: wait for gluster DaemonSet to be Running
   command: >
     kubectl get pods
-    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].status.phase}'
+    -o jsonpath='{.items[?(@.spec.containers[].name=="gluster-server")].status.phase}'
   register: get_phase
   until: get_phase.stdout | match('^(Running\s)*Running$')
   # Wait for 10 minutes
@@ -30,7 +30,7 @@
 - name: wait for gluster DaemonSet to be Ready
   command: >
     kubectl get pods
-    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].status.containerStatuses[*].ready}'
+    -o jsonpath='{.items[?(@.spec.containers[].name=="gluster-server")].status.containerStatuses[*].ready}'
   register: get_is_ready
   until: get_is_ready.stdout | match( '^(true\s)*true$' )
   # Wait for 10 minutes
@@ -40,14 +40,14 @@
 - name: retrieve gluster-server pod name
   shell: >
     kubectl get pods
-    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].metadata.name}' |
+    -o jsonpath='{.items[?(@.spec.containers[].name=="gluster-server")].metadata.name}' |
     awk '{print $1;}' | tr -d '\n'
   register: get_name
 
 - name: retrieve gluster-server IPs
   command: >
     kubectl get pods
-    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].status.podIP}'
+    -o jsonpath='{.items[?(@.spec.containers[].name=="gluster-server")].status.podIP}'
   register: get_ips
 
 - set_fact:
