added taint toleration to enable scheduling of traefik on master node if master node also is labeled with role=edge

--- a/playbooks/roles/traefik/files/traefik-daemonset.yml
+++ b/playbooks/roles/traefik/files/traefik-daemonset.yml
@@ -13,6 +13,9 @@ spec:
         k8s-app: traefik-ingress-lb
         name: traefik-ingress-lb
     spec:
+      tolerations:
+      - key: node-role.kubernetes.io/master
+        effect: NoSchedule
       hostNetwork: true # workaround
       terminationGracePeriodSeconds: 60
       containers:
